# nan

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  Readme.md.old  commit.ps1  hellow_word.nb  multitest-cpp.ps1  multitest-py.ps1  multitest.ps1  nan-temp.nb  nan.bat  package-lock.json  temp.nb
.github/workflows/: build.yml  release.yml
build-win/: asm.nsm  nan-temp.nb  temp.nb
docs/: mewlib.md  virtual.md
docs/nan/: docusaurus.config.js  package-lock.json  package.json
docs/nan/docs/: intro.md
docs/nan/docs/virtual/: _category_.json  installation.md  lib.md  references.md
docs/nan/src/components/HomepageFeatures/: index.js
docs/nan/src/pages/: index.js
features/: tiny-os.nsm
glm/glm/: glm.hpp
include/: AST.hpp  Config.hpp  Lexer.hpp  Parser.hpp  Token.hpp  asm.hpp  asmlib.hpp  astlib.hpp  binarypack.hpp  compiler.hpp  config.h  context.hpp  dlllib.hpp  grammar.hpp  mewlib.h  mewstack.hpp  nan.hpp  nanasm.hpp  nanler.hpp  shell.hpp  temp.nb  virtual.hpp  virtuallib.hpp
include/docs/: virtual.md
nan/: .txt  Coroutine.nan  allocator-lex.nan  allocator.nan  asm.nsm  pointers.nan  porno.rs  preprocess.nan  std.nan  test.nan  test_std.nan  variable.nan  write.nan
nanasm/: CMakeLists.txt  a.nb  asm.nsm  code_builder.js  hellow.nb  index.js  main.cpp  nan.g4  nanLexer.js  nanLexer.tokens  nanListener.js  nanParser.js  nanVisitor.js  package-lock.json  package.json  temp.json  temp.nb  test.json  test.nb  test.nsm  visitor.js  vm.js
nanasm/.antlr/: nan.interp  nan.tokens  nanBaseListener.java  nanLexer.interp  nanLexer.java  nanListener.java  nanParser.java
nanld/: CMakeLists.txt  ld.hpp  main.cpp
nanler/: CMakeLists.txt  Config.hpp  Context.hpp  Defs.hpp  Lexer.hpp  Parser.hpp  Token.hpp  commands.hpp  main.cpp  visitor.hpp
nanler/asm/: CMakeLists.txt  all.s  asm.hpp  main.cpp
nanler/compiler/: CMakeLists.txt  asmbuilder.hpp  compiler.hpp
nanler/parser/: CMakeLists.txt  array_in_round.cpp  assign.cpp  bin_wutil.cpp  block.cpp  expression.cpp  extra.cpp  flag.cpp  function.cpp  function_call.cpp  if_else_final.cpp  incapsulate.cpp  iternal_name.cpp  line.cpp  name.cpp  namespace.cpp  namespace_expand.cpp  namespace_narrow.cpp  operator.cpp  parser_declaratins.hpp  return.cpp  structure.cpp  template.cpp  trait.cpp  type.cpp  typedef.cpp
nanshell/: CMakeLists.txt  main.cpp
opt-m/: CMakeLists.txt  main.cpp
opt-test/: CMakeLists.txt  hellow_word.cpp  main.cpp
src/: --main.cpp  CMakeLists.txt  main.cpp
test/vm/: hellow_word.nb  vlib-for-10.nb
test/vm/vma/: hellow_word.na
tests/: LICENSE  countMemoryUsage.ps1  memory-nanvm.ps1  multitest-js.ps1  multitest.ps1  opt-test.ps1  opt_test.js  opt_test.py  run.bat
tests/vm/: hellow_word.nb
vm/: CMakeLists.txt  main.cpp
vm-test/: CMakeLists.txt  main.cpp
vma/: CMakeLists.txt  main.cpp
